Kubernetes updates, config for Prometheus/Grafana